<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haruki.cafecross_v2.ProceedActivity"
    android:background="@color/colorPrimary">

    <!--<ScrollView-->
        <!--android:id="@+id/confirmation_scroll_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--&gt;-->

        <!--<LinearLayout-->
            <!--android:id="@+id/confirmation_linear_layout"-->
            <!--android:layout_width="350dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/colorBrownLight"-->
            <!--android:orientation="vertical"-->
            <!--android:padding="15dp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent">-->

    <ScrollView
        android:id="@+id/confirmation_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/confirmation_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorBrownLight"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvHeaderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_name" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:id="@+id/tvHeaderZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_zip" />

            <TextView
                android:id="@+id/tvZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="062-0051" />

            <TextView
                android:id="@+id/tvHeaderPrefecture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_prefecture" />

            <TextView
                android:id="@+id/tvPrefecture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="Hokkaido" />

            <TextView
                android:id="@+id/tvHeaderAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_address1" />

            <TextView
                android:id="@+id/tvAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="Tsukisamu Higashi 1-7" />

            <TextView
                android:id="@+id/tvHeaderAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_address2" />

            <TextView
                android:id="@+id/tvAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="Toyohira-ward, Sapporo, Hokkaido" />

            <TextView
                android:id="@+id/tvHeaderApartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_apartment" />

            <TextView
                android:id="@+id/tvApartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="OOO OOO" />

            <TextView
                android:id="@+id/tvHeaderCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_company" />

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="None" />

            <TextView
                android:id="@+id/tvHeaderEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_email" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="example@example.com" />

            <TextView
                android:id="@+id/tvHeaderPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_phone" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="(090)5953-3729" />

            <TextView
                android:id="@+id/tvHeaderItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_items_ordered" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/confirmation_item_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/tvFinalTotalPrice"
                android:text="¥1,500"
                android:layout_gravity="end"
                android:layout_marginBottom="36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tvComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/header_comments" />

            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:gravity="top|start"
                android:hint="@string/example_comment"
                android:inputType="textMultiLine"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btConfirm"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/confirm_order" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
