<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haruki.cafecross_v2.ProceedActivity"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorBrownLight"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/tVHeaderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/header_name" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tVHeaderName"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etFirstName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tVHeaderName"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/etLastName"
                    android:layout_toRightOf="@+id/etLastName"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                    android:nextFocusDown="@id/etZip1"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_zip"
                    android:id="@+id/tvHeaderZip" />

                <EditText
                    android:id="@+id/etZip1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvHeaderZip"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/etZip2"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignBaseline="@+id/etZip1"
                    android:layout_alignBottom="@+id/etZip1"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@+id/etZip1"
                    android:layout_toRightOf="@+id/etZip1"
                    android:text="-"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:id="@+id/etZip2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/etZip1"
                    android:layout_alignBottom="@+id/etZip1"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_toEndOf="@+id/textView3"
                    android:layout_toRightOf="@+id/textView3"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etPrefecture"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_prefecture"
                    android:id="@+id/textView9" />

                <EditText
                    android:id="@+id/etPrefecture"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView9"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etAddress1"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/tvHeaderAddress1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_address1" />

                <EditText
                    android:id="@+id/etAddress1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvHeaderAddress1"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etAddress2"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_address2"
                    android:id="@+id/tvHeaderAddress2" />

                <EditText
                    android:id="@+id/etAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvHeaderAddress2"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etApartment"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_apartment" />

                <EditText
                    android:id="@+id/etApartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView10"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etCompany"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_company"
                    android:id="@+id/textView7" />

                <EditText
                    android:id="@+id/etCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView7"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etEmail"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/tvHeaderEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvHeaderEmail"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etPhone"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_phone"
                    android:id="@+id/textView8" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView8"
                    android:inputType="phone" />

            </RelativeLayout>

            <Button
                android:id="@+id/btProceed"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/go_next" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
